--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,39 @@
 h1 {
-  color: beige;
+  color: black;
   text-align: center;
 }
 header {
-  height: 200px;
-  background-color: black;
+  height: 150px;
+  background-color: beige;
 }
 body {
+  margin: 0px;
+}
+
+ul {
+  list-style-type: none;
   margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 40px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: green;
 }
