--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,13 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
 }
+footer {
+  height: 100px;
+  background-color: white;
+}
+
+
+
+h3 {
+  text-align: center;
+}
