plaatjes toegevoegd (product), prijzen en toevoegen aan winkelwagen hebben we onder de plaatjes gezet

--- a/styles.css
+++ b/styles.css
@@ -53,5 +53,16 @@ footer {
 
 
 h3 {
-  text-align: center;
+  text-align: center ;
+}
+
+
+.product {
+  width: 20%;
+  margin: 2%;
+  float: left;
+}
+
+.product img {
+  width: 100%;
 }
